fix rounded image stretching on profile picture

--- a/src/app/modules/shared/user/components/user-picture/user-picture.component.scss
+++ b/src/app/modules/shared/user/components/user-picture/user-picture.component.scss
@@ -3,10 +3,5 @@
 	width: 36px;
 	border-radius: 50%;
 	overflow: hidden;
-	background: rgba(0, 0, 0, 0.1);
-}
-
-img{
-	width: 100%;
-	height: 100%;
+	background-size: cover;
 }
